# ultimatetoolbag

./: .gitignore  CMakeLists.txt  aboutdialog.cpp  aboutdialog.h  aboutdialog.ui  appdatamanager.cpp  appdatamanager.h  checksums.json  consts.h  enums.h  etagcontroller.cpp  etagcontroller.h  format_all.bat  icons.qrc  iconutils.cpp  instances.h  languagemanager.cpp  languagemanager.h  logger.cpp  logger.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  resources.qrc  settingsmanager.cpp  settingsmanager.h  settingswin.cpp  settingswin.h  settingswin.ui  thememanager.cpp  thememanager.h  translations.qrc  ultimate-toolbag.desktop  versionmanager.h
1.0.0/: checksums.json  patchnotes.md
1.0.0/themes/: dark.qss  light.qss  singularity.qss  synthwave.qss
assets/: global.qss
assets/locale/: CONVERT.bat  RELEASE.bat  de_DE.qm  de_DE.ts  en_US.qm  en_US.ts  es_ES.qm  es_ES.ts  fr_FR.qm  fr_FR.ts  it_IT.qm  it_IT.ts  ru_RU.qm  ru_RU.ts  tr_TR.qm  tr_TR.ts
etc/: apptranslations.h  consts.h  enums.h  instances.h
forms/: aboutdialog.cpp  aboutdialog.h  aboutdialog.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui
lib/: apimanager.cpp  apimanager.h  cryptomanager.cpp  cryptomanager.h  ecbrates.cpp  ecbrates.h  generictoolwidget.cpp  generictoolwidget.h  imagerepair.cpp  imagerepair.h  jsonworker.cpp  jsonworker.h  toolwidgetmanager.cpp  toolwidgetmanager.h  unitconverter.cpp  unitconverter.h
skeleton/: assetvalidator.cpp  assetvalidator.h  favoritesmanager.cpp  favoritesmanager.h  fileorganizer.cpp  fileorganizer.h  groupmanager.cpp  groupmanager.h  iconutils.cpp  iconutils.h  languagemanager.cpp  languagemanager.h  logger.cpp  logger.h  loggerstream.h  settingsmanager.cpp  settingsmanager.h  thememanager.cpp  thememanager.h  toastmanager.cpp  toastmanager.h  versionmanager.h
themes/: dark.qss  light.qss
